--- a/wheelchair_description/package.xml
+++ b/wheelchair_description/package.xml
@@ -2,9 +2,9 @@
   <name>wheelchair_description</name>
   <version>1.0.0</version>
   <description>
-    <p>URDF Description package for urdf</p>
+    <p>URDF Description package for wheelchair</p>
     <p>This package contains configuration data, 3D models and launch files
-for urdf robot</p>
+for wheelchair robot</p>
   </description>
   <author>TODO</author>
   <maintainer email="TODO@email.com" />
